--- a/reactjs-pwa/packages/siminia/template.html
+++ b/reactjs-pwa/packages/siminia/template.html
@@ -21,9 +21,9 @@
             Apple Icons for Homescreen
             Sizes: https://developer.apple.com/design/human-interface-guidelines/ios/icons-and-images/app-icon/
         -->
-        <link  rel="icon" type="image/x-icon" href="/static/icons/siminia_square_512.png" />
-        <link rel="apple-touch-icon" href="/static/icons/siminia_square_512.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/x-icon" href="/static/icons/favicon.png" />
+        <link rel="apple-touch-icon" href="/static/icons/icon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/icon.png">
         <link rel="stylesheet" href="/static/simistatic/bootstrap.min.css">
         <link rel="preconnect" href="<%= process.env.MAGENTO_BACKEND_URL %>">
         <script type="text/javascript">
@@ -94,22 +94,7 @@
         <div id="root" ></div>
         <div class="splash-screen" id="splash-screen" style="margin-top:20%;text-align:center;position: fixed;width: 100%;top: 0;left: 0;">
             <div id="splash-img" style="width: 30%; height: auto; margin: 0 auto 0; min-width: 280px; min-height: 280px;">
-                <!--
-                <img src="/static/icons/splash.svg" alt="Splash Screen" width="30%" height="auto">
-                -->
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 78 22" style="enable-background:new 0 0 78 22;" xml:space="preserve">
-                    <style type="text/css">
-                        #splash-img .st0{fill:#FF8000;}
-                    </style>
-                    <g>
-                        <path class="st0" d="M29.2,6.2l-3-1.4c-0.5-0.3-0.7-0.9-0.5-1.4v0c0.3-0.5,0.9-0.7,1.4-0.5l3,1.4c0.5,0.3,0.7,0.9,0.5,1.4v0   C30.4,6.3,29.7,6.5,29.2,6.2z"/>
-                        <path class="st0" d="M44.3,19.9l-12.2,2c-0.5,0.1-1-0.3-1.1-0.8l0,0c-0.1-0.5,0.3-1,0.8-1.1l12.2-2c0.5-0.1,1,0.3,1.1,0.8v0   C45.1,19.4,44.8,19.9,44.3,19.9z"/>
-                        <path class="st0" d="M36,16.4l-3.2,5.1c-0.3,0.5-0.9,0.6-1.3,0.3h0c-0.5-0.3-0.6-0.9-0.3-1.3l3.2-5.1c0.3-0.5,0.9-0.6,1.3-0.3l0,0   C36.1,15.3,36.2,15.9,36,16.4z"/>
-                        <circle class="st0" cx="38.6" cy="19.8" r="2"/>
-                        <circle class="st0" cx="45.4" cy="18.6" r="2"/>
-                        <path class="st0" d="M43.4,0.1l-13,3.5c-1.5,0.4-2.5,2-2,3.5l2.1,7.7c0.4,1.5,2,2.5,3.5,2l13-3.5c1.5-0.4,2.5-2,2-3.5l-2.1-7.7   C46.5,0.6,44.9-0.3,43.4,0.1z M46.9,9.5c0.3,1-0.3,2.1-1.4,2.4l-11.2,3c-1,0.3-2.1-0.3-2.4-1.4l-1.6-6.1c-0.3-1,0.3-2.1,1.4-2.4   l11.2-3c1-0.3,2.1,0.3,2.4,1.4L46.9,9.5z"/>
-                    </g>
-                </svg>
+                <img src="/static/icons/icon.png" alt="Splash Screen" width="30%" height="auto">
             </div>
         </div>
 
