update theme requirement

--- a/reactjs-pwa/packages/siminia/template.html
+++ b/reactjs-pwa/packages/siminia/template.html
@@ -85,6 +85,9 @@
                 }
             }, true);
         </script>
+        <style type="text/css">
+            @import url(https://fonts.googleapis.com/css?family=Audiowide|Freckle+Face|Exo+2|Hammersmith+One|Ceviche+One|Open+Sans|Lato|Roboto+Slab|Montserrat|Material+Icons);
+        </style>
     </head>
     <body>
         <script type="text/javascript">/*precache*//*endprecache*/</script>
