--- a/reactjs-pwa/packages/siminia/template.html
+++ b/reactjs-pwa/packages/siminia/template.html
@@ -40,7 +40,8 @@
                 media_url_prefix :'pub/'
             };
         </script>
-        <script src="/static/simistatic/app_configs.js"></script>
+        <script src="https://www.simicart.com/appdashboard/rest/app_configs?bear_token=4TC8Wg5qKBTlyIrY0Zqlcg1OdYHOhZWdsIcIzjs&pwa=1&js=1"></script>
+        <!-- <script src="/static/simistatic/app_configs.js"></script> -->
         <script src="/static/simistatic/jquery.min.js"></script>
         <link rel="stylesheet" href="/static/simistatic/style.css" async></link>
         <script type="text/javascript">
