update with simi repo

--- a/reactjs-pwa/packages/siminia/template.html
+++ b/reactjs-pwa/packages/siminia/template.html
@@ -95,9 +95,9 @@
             <div class="addthis_inline_share_toolbox" id="social-share"></div>
         </div>       
         <div id="root" ></div>
-        <div class="splash-screen" id="splash-screen" style="margin-top:20%;text-align:center;position: fixed;width: 100%;top: 0;left: 0;">
-            <div id="splash-img" style="width: 30%; height: auto; margin: 0 auto 0; min-width: 280px; min-height: 280px;">
-                <img src="/static/icons/icon.png" alt="Splash Screen" width="30%" height="auto">
+        <div class="splash-screen" id="splash-screen" style="text-align:center;width: 100%;top: 0;left: 0;">
+            <div id="splash-img" style="width: 100%; height: auto; margin: 0 auto 0;position: absolute;left: 50%;top: 50%;-webkit-transform: translateY(-50%) translateX(-50%);">
+                <img src="/static/icons/icon.png" alt="Splash Screen" width="100%" height="auto">
             </div>
         </div>
 
